[package]
name = "logtail"
version = "0.1.0"
edition = "2021"
authors = ["zhangzhishan"]
description = "A tool for monitoring multiple log files in a directory simultaneously"
repository = "https://github.com/zhangzhishan/logtail"
license = "MIT"
keywords = ["log", "monitoring", "tail", "watch", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
notify = "6.1"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
colored = "2.1"
